--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <div class="box2">Two</div>
         <div class="box3">Three</div>
         <div class="box4">Four</div>
+        <div class="box5">Five</div>
+        <div class="box6">Six</div>
+        <div class="box7">Seven</div>
+        <div class="box8">Eight</div>
+        <div class="box9">Nein</div>
+        <div class="box10">Ten</div>
+        <div class="box11">Eleven</div>
+        <div class="box12">Twelve</div>
         </div>
     </main>
     <footer></footer>
